--- a/home/src/main/res/layout/item_banner_video_us_layout.xml
+++ b/home/src/main/res/layout/item_banner_video_us_layout.xml
@@ -28,11 +28,11 @@
                 android:layout_height="match_parent"
                 android:background="@color/themeMainColorTwo_90"/>
 
-            <com.google.android.exoplayer2.ui.PlayerView
-                android:id="@+id/player_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center" />
+<!--            <com.google.android.exoplayer2.ui.PlayerView-->
+<!--                android:id="@+id/player_view"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_gravity="center" />-->
         </FrameLayout>
 
 
